--- a/kelas.html
+++ b/kelas.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,22 +17,24 @@
     />
   </head>
   <body>
-    <div class="">
-      <ul class="nav justify-content-center">
+    <div class="bg-color">
+      <ul class="bg-color nav justify-content-center w-middle">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Beranda</a>
+          <a class="nav-link text-white" href="#">Beranda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Kelas</a>
+          <a class="nav-link text-white" href="#">Kelas</a>
         </li>
       </ul>
     </div>
-    <div class="text-center">
+    <br />
+    <div class="m-2">
       <div class="row">
         <div class="col-4">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item text-start p-3">
               <h5 class="mt-2 mb-2">Kelas Pemrograman Dasar</h5>
+              <p>Instructor : Mr. John Doe</p>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -49,13 +55,10 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <p>
-                    Materi kali ini akan membahas dassar pemrograman. Materi
-                    kali ini akan membahas dassar pemrograman.
-                  </p>
-                  <button type="button" class="btn btn-outline-primary">
-                    Lihat Materi
-                  </button>
+                  <a href="http://" rel="noopener noreferrer"
+                    >1. Dasar Pemrogaman
+                  </a>
+                  <i class="bi bi-patch-check-fill"></i>
                 </div>
               </div>
             </div>
@@ -78,52 +81,77 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <p>
+                    Materi kali ini akan membahas dassar pemrograman. Materi
+                    kali ini akan membahas dassar pemrograman.
+                  </p>
+                  <button type="button" class="btn btn-outline-primary">
+                    Lihat Materi
+                  </button>
                 </div>
               </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree"
-                  aria-expanded="false"
-                  aria-controls="collapseThree"
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    Sesi 3 - CSS Dasar
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
                 >
-                  Sesi 3 - CSS Dasar
-                </button>
-              </h2>
-              <div
-                id="collapseThree"
-                class="accordion-collapse collapse"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <div class="accordion-body">
+                    <p>
+                      Materi kali ini akan membahas dassar pemrograman. Materi
+                      kali ini akan membahas dassar pemrograman.
+                    </p>
+                    <button type="button" class="btn btn-outline-primary">
+                      Lihat Materi
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-8">Column</div>
+        <div class="col-8">
+          <div class="section-video text-center">
+            <!-- <video width="720" height="480" controls class="m-video">
+              <source src="/assets/video.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video> -->
+            <iframe
+              width="720"
+              height="480"
+              src="https://www.youtube.com/embed/60K7zxIjHQo?si=wGTPbCTm2kAxYlHl"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+              class="mt-2"
+            ></iframe>
+
+            <h3>Materi</h3>
+            <p class="p-4">
+              Pemrograman dasar adalah tahap awal dalam pembelajaran pemrograman
+              komputer. Ini melibatkan pengenalan konsep-konsep dasar yang
+              diperlukan untuk mulai menulis dan memahami kode. Berikut adalah
+              beberapa aspek kunci dari pemrograman dasar:
+            </p>
+            <button type="button" class="btn btn-outline-primary mb-4">
+              Tandai selesai
+            </button>
+          </div>
+        </div>
       </div>
     </div>
     <br />
