--- a/kelas.html
+++ b/kelas.html
@@ -55,10 +55,33 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <a href="http://" rel="noopener noreferrer"
-                    >1. Dasar Pemrogaman
-                  </a>
-                  <i class="bi bi-patch-check-fill"></i>
+                  <div class="m-1">
+                    <a href="http://" rel="noopener noreferrer"
+                      >1. Dasar Pemrogaman
+                    </a>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger"></i>
+                  </div>
+                  <div class="m-1">
+                    <a href="http://" rel="noopener noreferrer"
+                      >2. Sejarah Pemrograman
+                    </a>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger"></i>
+                  </div>
+                  <div class="m-1">
+                    <a href="http://" rel="noopener noreferrer"
+                      >3. Pentingnya Belajar Dasar Pemrogaman
+                    </a>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger"></i>
+                  </div>
+                  <div class="m-1">
+                    <a href="http://" rel="noopener noreferrer"
+                      >4. Roadmap Belajar
+                    </a>
+                    &nbsp;
+                  </div>
                 </div>
               </div>
             </div>
@@ -128,16 +151,16 @@
               <source src="/assets/video.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video> -->
+
             <iframe
               width="720"
               height="480"
-              src="https://www.youtube.com/embed/60K7zxIjHQo?si=wGTPbCTm2kAxYlHl"
+              src="https://www.youtube.com/embed/jGyYuQf-GeE?si=VYPWGtZPz1kNeh7G"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
               allowfullscreen
-              class="mt-2"
             ></iframe>
 
             <h3>Materi</h3>
