--- a/kelas.html
+++ b/kelas.html
@@ -36,6 +36,7 @@
               <h5 class="mt-2 mb-2">Kelas Pemrograman Dasar</h5>
               <p>Instructor : Mr. John Doe</p>
             </div>
+            <!-- KELAS PEMROGRAMAN DASAR -->
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button
@@ -91,6 +92,7 @@
                 </div>
               </div>
             </div>
+            <!-- KELAS HTML DASAR -->
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button
@@ -110,15 +112,43 @@
                 data-bs-parent="#accordionExample"
               >
                 <div class="accordion-body">
-                  <p>
-                    Materi kali ini akan membahas dassar pemrograman. Materi
-                    kali ini akan membahas dassar pemrograman.
-                  </p>
-                  <button type="button" class="btn btn-outline-primary">
-                    Lihat Materi
-                  </button>
+                  <div class="m-1">
+                    <button
+                      class="btn btn-link"
+                      onclick="changeVideo(3)"
+                      rel="noopener noreferrer"
+                    >
+                      1. Pendahuluan Html
+                    </button>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger" id="4"></i>
+                  </div>
+                  <div class="m-1">
+                    <button
+                      class="btn btn-link"
+                      onclick="changeVideo(4)"
+                      rel="noopener noreferrer"
+                    >
+                      2. Hello World
+                    </button>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger" id="5"></i>
+                  </div>
+                  <div class="m-1">
+                    <button
+                      class="btn btn-link"
+                      onclick="changeVideo(5)"
+                      rel="noopener noreferrer"
+                    >
+                      3. Tag HTML
+                    </button>
+                    &nbsp;
+                    <i class="bi bi-check-circle-fill text-danger" id="6"></i>
+                  </div>
                 </div>
               </div>
+
+              <!-- KELAS CSS DASAR -->
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button
@@ -138,13 +168,39 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-                    <p>
-                      Materi kali ini akan membahas dassar pemrograman. Materi
-                      kali ini akan membahas dassar pemrograman.
-                    </p>
-                    <button type="button" class="btn btn-outline-primary">
-                      Lihat Materi
-                    </button>
+                    <div class="m-1">
+                      <button
+                        class="btn btn-link"
+                        onclick="changeVideo(6)"
+                        rel="noopener noreferrer"
+                      >
+                        1. Pendahuluan CSS
+                      </button>
+                      &nbsp;
+                      <i class="bi bi-check-circle-fill text-danger" id="7"></i>
+                    </div>
+                    <div class="m-1">
+                      <button
+                        class="btn btn-link"
+                        onclick="changeVideo(7)"
+                        rel="noopener noreferrer"
+                      >
+                        2. Penempatan CSS
+                      </button>
+                      &nbsp;
+                      <i class="bi bi-check-circle-fill text-danger" id="8"></i>
+                    </div>
+                    <div class="m-1">
+                      <button
+                        class="btn btn-link"
+                        onclick="changeVideo(8)"
+                        rel="noopener noreferrer"
+                      >
+                        3. Font Styling
+                      </button>
+                      &nbsp;
+                      <i class="bi bi-check-circle-fill text-danger" id="9"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -163,7 +219,7 @@
               id="videoFrame"
               width="720"
               height="480"
-              src="https://www.youtube.com/embed/jGyYuQf-GeE?si=VYPWGtZPz1kNeh7G"
+              src="https://www.youtube.com/embed/bRNlrdfKNd4?si=5uQ4GV96gT3QogS-"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -173,14 +229,37 @@
 
             <h3>Materi</h3>
             <p class="p-4" id="materi">
-              Pemrograman dasar adalah tahap awal dalam pembelajaran pemrograman
-              komputer. Ini melibatkan pengenalan konsep-konsep dasar yang
-              diperlukan untuk mulai menulis dan memahami kode. Berikut adalah
-              beberapa aspek kunci dari pemrograman dasar:
+              Pada kesempatan kali ini, Saya John doe akan mengajarkan materi
+              Kelas Pemrograman dasar. Diharapkan, kita semua mendapat manfaat
+              dari sesi kelas tersebut
             </p>
-            <button type="button" class="btn btn-outline-primary mb-4">
+            <p id="id_session"></p>
+
+            <!-- <div id="buttonContainer"></div> -->
+            <button
+              type="button"
+              class="btn btn-outline-primary mb-4"
+              id="button-clear"
+              onclick="doneSession(1)"
+            >
               Tandai selesai
             </button>
+            <!-- <button
+              type="button"
+              class="btn btn-outline-primary mb-4"
+              id="button-clear"
+              onclick="doneSession(2)"
+            >
+              Tandai selesai
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-primary mb-4"
+              id="button-clear"
+              onclick="doneSession(3)"
+            >
+              Tandai selesai
+            </button> -->
           </div>
         </div>
       </div>
@@ -193,65 +272,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="dummy.js"></script>
-    <script>
-      let session_class = [
-        {
-          id: 1,
-          id_session: 1,
-          title: "1. Dasar Pemrograman",
-          link_video:
-            "https://www.youtube.com/embed/jGyYuQf-GeE?si=ojRu13bqsvg-Bjnd",
-          description:
-            "Pemrograman dasar adalah tahap awal dalam pembelajaran pemrograman komputer. Ini melibatkan pengenalan konsep-konsep dasar yang diperlukan untuk mulai menulis dan memahami kode. Berikut adalah beberapa aspek kunci dari pemrograman dasar:",
-          is_success: true,
-        },
-        {
-          id: 2,
-          id_session: 1,
-          title: "2. Sejarah Pemrograman",
-          link_video:
-            "https://www.youtube.com/embed/ZDuwL9qGtuI?si=X1pgMHPgoypbyred",
-          description:
-            "Mengenal sejarah pemrograman seperti algoritma, logika pemrograman, dan prinsip dasar pemrograman. Kursus ini membantu Anda memahami fondasi yang diperlukan sebelum mempelajari bahasa pemrograman spesifik.",
-          is_success: true,
-        },
-        {
-          id: 3,
-          id_session: 1,
-          title: "3. Roadmap Belajar Pemrograman",
-          link_video:
-            "https://www.youtube.com/embed/OEhw6GqQDts?si=CwoqHev6bQp947HD",
-          description:
-            "Mempelajari roadmap belajar pemrograman yang efektif. Kursus ini memberikan panduan tentang bagaimana memulai belajar pemrograman, memilih bahasa pemrograman, dan langkah-langkah yang harus diambil untuk menjadi seorang pemrogram.",
-          is_success: false,
-        },
-      ];
-
-      const videoLinks = ["", "", ""];
-
-      function changeVideo(index) {
-        document.getElementById("videoFrame").src =
-          session_class[index].link_video;
-        document.getElementById("materi").innerText =
-          session_class[index].description;
-      }
-      function updateDisplay() {
-        session_class.forEach((item) => {
-          const element = document.getElementById(item.id);
-          if (element) {
-            if (element.id == item.id && item.is_success) {
-              console.log(element);
-              element.classList.remove("hidden");
-            } else {
-              element.classList.add("hidden");
-              console.log(element);
-            }
-          }
-        });
-      }
-
-      // Panggil fungsi untuk memperbarui tampilan elemen saat halaman dimuat
-      updateDisplay();
-    </script>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
