--- a/kelas.html
+++ b/kelas.html
@@ -20,7 +20,7 @@
     <div class="bg-color">
       <ul class="bg-color nav justify-content-center w-middle">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Beranda</a>
+          <a class="nav-link text-white" href="index.html">Beranda</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Kelas</a>
