--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,13 +13,13 @@
     />
   </head>
   <body>
-    <div class="">
-      <ul class="nav justify-content-center">
+    <div class="bg-color">
+      <ul class="bg-color nav justify-content-center w-middle">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Beranda</a>
+          <a class="nav-link text-white" href="#">Beranda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Kelas</a>
+          <a class="nav-link text-white" href="#">Kelas</a>
         </li>
       </ul>
     </div>
@@ -34,47 +34,25 @@
       </nav>
       <div class="d-flex">
         <div class="card" style="width: 18rem; margin: 4px">
-          <img src="/assets/css.jpg" class="card-img-top" alt="..." />
+          <img src="/assets/pemdas.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Kelas Pemrograman Dasar</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Kelas pemrograman dasar mencakup beberapa topik penting untuk
+              membantu pemula memahami konsep-konsep dasar dalam pemrograman
             </p>
-            <a href="kelas.html" class="btn btn-primary">Ikuti</a>
+            <a href="kelas.html" class="btn btn-primary">Ikuti Kelas</a>
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 4px">
           <img src="/assets/css.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">CSS Advanced</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Kelas CSS tingkat lanjut mencakup topik-topik yang lebih kompleks
+              dan mendalam dibandingkan dengan kelas dasar
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem; margin: 4px">
-          <img src="/assets/css.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem; margin: 4px">
-          <img src="/assets/css.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary disabled">Cooming Soon</a>
           </div>
         </div>
       </div>
