--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/session.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,7 +41,7 @@
               Kelas pemrograman dasar mencakup beberapa topik penting untuk
               membantu pemula memahami konsep-konsep dasar dalam pemrograman
             </p>
-            <a href="kelas.html" class="btn btn-primary">Ikuti Kelas</a>
+            <a href="session.html" class="btn btn-primary">Ikuti Kelas</a>
           </div>
         </div>
         <div class="card" style="width: 18rem; margin: 4px">
