--- a/session.html
+++ b/session.html
@@ -28,7 +28,7 @@
       </ul>
     </div>
     <br />
-    <div class="m-2">
+    <div class="m-2" style="min-height: 100vh">
       <div class="row">
         <div class="col-4">
           <div class="accordion" id="accordionExample">
