--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     />
   </head>
   <body>
-    <div class="bg-color">
-      <ul class="bg-color nav justify-content-center w-middle">
+    <!-- NAVBAR -->
+    <div class="bg-color d-flex">
+      <div class="p-2 text-white" style="width: 15%"><h5>Pemrograman</h5></div>
+      <ul
+        class="bg-color nav justify-content-center w-middle"
+        style="width: 70%"
+      >
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Beranda</a>
         </li>
@@ -24,15 +29,17 @@
       </ul>
     </div>
     <br />
-    <div class="container">
+    <!-- KONTEN -->
+    <div class="container" style="min-height: 100vh">
+      <!-- DAFTAR KELAS -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mb-3">
           <li class="breadcrumb-item active" aria-current="page">
-            Daftar Kelas
+            <b> Daftar Kelas</b>
           </li>
         </ol>
       </nav>
-      <div class="d-flex">
+      <div class="d-flex mb-3">
         <div class="card" style="width: 18rem; margin: 4px">
           <img src="/assets/pemdas.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -56,6 +63,53 @@
           </div>
         </div>
       </div>
+      <!-- DAFTAR ARTIKEL -->
+      <nav aria-label="breadcrumb mt-3">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">
+            <b> Daftar Artikel</b>
+          </li>
+        </ol>
+      </nav>
+      <div class="">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="..." class="img-fluid rounded-start" alt="..." />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-body-secondary"
+                    >Last updated 3 mins ago</small
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="bg-color d-flex">
+      <div class="p-2 text-white" style="width: 15%"><h5>Pemrograman</h5></div>
+      <ul
+        class="bg-color nav justify-content-center w-middle"
+        style="width: 70%"
+      >
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Beranda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Kelas</a>
+        </li>
+      </ul>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
