add innitial article

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   <body>
     <!-- NAVBAR -->
     <div class="bg-color d-flex">
-      <div class="p-2 text-white" style="width: 15%"><h5>Pemrograman</h5></div>
+      <div class="p-2 text-white" style="width: 15%">
+        <h5>Pemrograman</h5>
+      </div>
       <ul
         class="bg-color nav justify-content-center w-middle"
         style="width: 70%"
       >
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Beranda</a>
+          <a class="nav-link text-white" href="index.html">Beranda</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Kelas</a>
@@ -71,25 +73,54 @@
           </li>
         </ol>
       </nav>
-      <div class="">
-        <div class="card mb-3" style="max-width: 540px">
+      <div class="d-flex mb-5">
+        <!-- Artikel 1 -->
+        <div class="card m-3" style="max-width: 540px">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="..." class="img-fluid rounded-start" alt="..." />
+              <img
+                src="/assets/audio.png"
+                class="img-fluid rounded-start"
+                alt="audio logo"
+              />
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Menyisipkan Audio dan Video di Html</h5>
                 <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
+                  Menyisipkan audio dan video di HTML sangat mudah dilakukan
+                  dengan menggunakan tag audio dan video
                 </p>
                 <p class="card-text">
-                  <small class="text-body-secondary"
-                    >Last updated 3 mins ago</small
-                  >
+                  <small class="text-body-secondary">Oleh Jane Doe</small>
                 </p>
+                <a href="">Baca Artikel</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Artikel 2 -->
+        <div class="card m-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="/assets/table.jpg"
+                class="img-fluid rounded-start"
+                alt="audio logo"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Membuat List dan Tabel di html</h5>
+                <p class="card-text">
+                  Membuat daftar (list) dan tabel (table) di HTML adalah cara
+                  yang umum untuk menyajikan data secara terstruktur di halaman
+                  web.
+                </p>
+                <p class="card-text">
+                  <small class="text-body-secondary">Oleh Mark</small>
+                </p>
+                <a href="">Baca Artikel</a>
               </div>
             </div>
           </div>
@@ -97,19 +128,8 @@
       </div>
     </div>
     <!-- FOOTER -->
-    <div class="bg-color d-flex">
-      <div class="p-2 text-white" style="width: 15%"><h5>Pemrograman</h5></div>
-      <ul
-        class="bg-color nav justify-content-center w-middle"
-        style="width: 70%"
-      >
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Beranda</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Kelas</a>
-        </li>
-      </ul>
+    <div class="bg-color p-3">
+      <p class="text-white text-center m-auto">Pemrograman @2024</p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
