--- a/session.html
+++ b/session.html
@@ -17,8 +17,15 @@
     />
   </head>
   <body>
-    <div class="bg-color">
-      <ul class="bg-color nav justify-content-center w-middle">
+    <!-- HEADER -->
+    <div class="bg-color d-flex">
+      <div class="p-2 text-white" style="width: 15%">
+        <h5>Pemrograman</h5>
+      </div>
+      <ul
+        class="bg-color nav justify-content-center w-middle"
+        style="width: 70%"
+      >
         <li class="nav-item">
           <a class="nav-link text-white" href="index.html">Beranda</a>
         </li>
@@ -28,9 +35,10 @@
       </ul>
     </div>
     <br />
+    <!-- KONTEN -->
     <div class="m-2" style="min-height: 100vh">
-      <div class="row">
-        <div class="col-4">
+      <div class="row" style="width: 99%">
+        <div class="col-md-4">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item text-start p-3">
               <h5 class="mt-2 mb-2">Kelas Pemrograman Dasar</h5>
@@ -210,7 +218,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-md-8">
           <div class="section-video text-center">
             <div id="description-container"></div>
             <!-- <video width="720" height="480" controls class="m-video">
@@ -268,7 +276,10 @@
       </div>
     </div>
     <br />
-
+    <!-- FOOTER -->
+    <div class="bg-color p-3">
+      <p class="text-white text-center m-auto">Pemrograman @2024</p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
