--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p class="card-text">
                   <small class="text-body-secondary">Oleh Jane Doe</small>
                 </p>
-                <a href="">Baca Artikel</a>
+                <a href="/article/video.html">Baca Artikel</a>
               </div>
             </div>
           </div>
