add article about table

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="card" style="width: 18rem; margin: 4px">
           <img src="/assets/css.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">CSS Advanced</h5>
+            <h5 class="card-title">Kelas CSS Advanced</h5>
             <p class="card-text">
               Kelas CSS tingkat lanjut mencakup topik-topik yang lebih kompleks
               dan mendalam dibandingkan dengan kelas dasar
             </p>
-            <a href="#" class="btn btn-primary disabled">Cooming Soon</a>
+            <a href="#" class="btn btn-secondary disabled">Cooming Soon</a>
           </div>
         </div>
       </div>
@@ -111,16 +111,15 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Membuat List dan Tabel di html</h5>
+                <h5 class="card-title">Membuat Tabel di html</h5>
                 <p class="card-text">
-                  Membuat daftar (list) dan tabel (table) di HTML adalah cara
-                  yang umum untuk menyajikan data secara terstruktur di halaman
-                  web.
+                  Membuat daftar tabel (table) di HTML adalah cara yang umum
+                  untuk menyajikan data secara terstruktur di halaman web.
                 </p>
                 <p class="card-text">
                   <small class="text-body-secondary">Oleh Mark</small>
                 </p>
-                <a href="">Baca Artikel</a>
+                <a href="/article/table.html">Baca Artikel</a>
               </div>
             </div>
           </div>
