--- a/session.html
+++ b/session.html
@@ -217,6 +217,9 @@
               <a href="quiz.html" target="_blank"> <b> Quiz Test</b></a>
             </div>
           </div>
+          <div class="p-4">
+            <a href="mail.html">Tanya Instructor !</a>
+          </div>
         </div>
         <div class="col-md-8">
           <div class="section-video text-center">
