--- a/mail.html
+++ b/mail.html
@@ -37,7 +37,7 @@
       style="min-height: 100vh; width: 70%; margin-bottom: 90px"
     >
       <h1>Kirim Pertanyaan Via Email</h1>
-      <form action="mailto:nugrohoriski159@gmail.com" method="post">
+      <form action="mailto:pemrograman@gmail.com" method="post">
         <label for="name">Nama:</label><br />
         <input type="text" id="name" name="name" required /><br /><br />
 
