Add Landing Page By Mas YUSUF

--- a/session.html
+++ b/session.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Pemrograman | Belajar Pemrograman</title>
     <link rel="stylesheet" href="css/session.css" />
     <link
       rel="stylesheet"
@@ -30,7 +30,7 @@
           <a class="nav-link text-white" href="index.html">Beranda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Kelas</a>
+          <a class="nav-link text-white" href="kelas.html">List</a>
         </li>
       </ul>
     </div>
@@ -249,14 +249,13 @@
             </p>
             <p id="id_session"></p>
 
-            <!-- <div id="buttonContainer"></div> -->
             <button
               type="button"
               class="btn btn-outline-primary mb-4"
               id="button-clear"
               onclick="doneSession(1)"
             >
-              Tandai selesai
+              Tandai
             </button>
             <!-- <button
               type="button"
