--- a/article/table.html
+++ b/article/table.html
@@ -26,7 +26,7 @@
           <a class="nav-link text-white" href="/index.html">Beranda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Kelas</a>
+          <a class="nav-link text-white" href="/kelas.html">List</a>
         </li>
       </ul>
     </div>
